--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,18 @@
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.4",
     "@fontsource/inter": "^5.2.6",
+    "@uiw/codemirror-theme-dracula": "^4.23.13",
     "@uiw/react-codemirror": "^4.23.13",
+    "codemirror": "^5.65.13",
+    "framer-motion": "^12.18.1",
     "lucide-react": "^0.514.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2"
+    "react": "^18.2.0",
+    "react-codemirror2": "^8.0.1",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.2",
+    "react-scroll": "^1.9.3",
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
